# struct-patch

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: dep_check.yml  lint.yml  release.yml  test.yml  typo.yml
complex-example/: Cargo.toml
complex-example/catalyst/: Cargo.toml  build.rs
complex-example/catalyst/src/: lib.rs
complex-example/substrate/: Cargo.toml
complex-example/substrate/src/: lib.rs
derive/: Cargo.toml
derive/src/: catalyst.rs  filler.rs  lib.rs  patch.rs  substrate.rs
example-nesting/: Cargo.toml
example-nesting/src/: lib.rs
lib/: Cargo.toml
lib/examples/: clap.rs  filler.rs  nested-linear-map.rs  nesting.rs  op.rs  time.rs
lib/src/: box.rs  lib.rs  option.rs  traits.rs
no-std-examples/: Cargo.toml  build.rs  memory.x
no-std-examples/.cargo/: config.toml
no-std-examples/src/: box.rs  option.rs
struct-patch/: Cargo.toml
struct-patch-derive/: Cargo.toml
struct-patch-derive/src/: filler.rs  lib.rs  patch.rs
struct-patch-trait/: Cargo.toml
struct-patch-trait/src/: lib.rs
struct-patch/examples/: add.rs  diff.rs  filler-op.rs  filler.rs  instance.rs  json.rs  nesting.rs  op.rs  option.rs  patch-attr.rs  rename-patch-struct.rs  status.rs  time.rs
struct-patch/src/: lib.rs  std.rs  traits.rs
