[workspace]
members = [
    "struct-patch",
    "struct-patch-derive",
    "struct-patch-trait"
]


[workspace.package]
authors = ["Antonio Yang <yanganto@gmail.com>"]
version = "0.2.0"
edition = "2021"
categories = ["Accessibility"]
keywords = ["struct", "patch", "macro", "derive", "overlay"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanganto/struct-patch/"
description = "A lib help you patch Rust instance, and easy to partial update configures."
