[workspace]
resolver = "2"
members = [
    "struct-patch",
    "struct-patch-derive",
]

[workspace.package]
authors = ["Antonio Yang <yanganto@gmail.com>"]
version = "0.9.3"
edition = "2021"
categories = ["development-tools"]
keywords = ["struct", "patch", "macro", "derive", "overlay"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanganto/struct-patch/"
description = "A library that helps you implement partial updates for your structs."
