[workspace]
resolver = "2"
members = [
    "lib",
    "derive",
]
exclude = [
    "no-std-examples",
    "complex-example",
]

[workspace.package]
authors = ["Antonio Yang <yanganto@gmail.com>"]
version = "0.12.1"
edition = "2021"
categories = ["development-tools"]
keywords = ["struct", "patch", "macro", "derive", "overlay"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yanganto/struct-patch/"
description = "A library that helps you implement partial updates for your structs."
rust-version = "1.61.0"
