[package]
name = "struct-patch-derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version =  "2.0", features = ["parsing"] }
syn-serde = { version = "0.3.2", features = ["json"], optional = true }

[features]
status = []
op = []
merge = []
nesting = []
catalyst = [ "syn-serde" ]

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
