[package]
name = "struct-patch-derive"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
syn = { version =  "1.0", features = ["parsing"] }
struct-patch-trait = { version = "=0.1", path = "../struct-patch-trait" }
