[package]
name = "struct-patch"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
struct-patch-derive = { version = "=0.4.1", path = "../struct-patch-derive" }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }

[features]
default = ["status"]
status = [
    "struct-patch-derive/status"
]

