[package]
name = "struct-patch"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true

[dependencies]
struct-patch-derive = { version = "=0.7.0", path = "../struct-patch-derive" }

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
serde_with = "3.9.0"

[features]
default = ["status"]
std = ["box", "option"]
box = []
option = []
status = [
    "struct-patch-derive/status"
]
