[package]
name = "catalyst"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
struct-patch.workspace = true
substrate = { path = "../substrate" }
