[package]
name = "catalyst"
authors.workspace = true
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description.workspace = true
rust-version.workspace = true

[dependencies]
struct-patch.workspace = true
substrate = { path = "../substrate" }
serde = { version = "1", features = ["derive"] }
toml = "1.1.2+spec-1.1.0"

[build-dependencies]
struct-patch.workspace = true
substrate = { path = "../substrate" }
